update & optimize SEO

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses through innovative design and technology." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://zerosstudio.vercel.app/about-zeros-studio.html" />
+  <meta property="og:url" content="https://zerosstudio.vercel.app/about.html" />
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
   <meta property="og:locale" content="en_IN" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -23,9 +23,9 @@
   <meta name="twitter:description"
     content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses through innovative design and technology." />
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
-  <link rel="canonical" href="https://zerosstudio.vercel.app/about-zeros-studio.html" />
-  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/about-zeros-studio.html" />
-  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/about-zeros-studio.html" />
+  <link rel="canonical" href="https://zerosstudio.vercel.app/about.html" />
+  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/about.html" />
+  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/about.html" />
   <title>About Zeros Studio - Creative Web Design Agency</title>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -48,7 +48,7 @@
       "@type": "ListItem",
       "position": 2,
       "name": "About",
-      "item": "https://zerosstudio.vercel.app/about-zeros-studio.html"
+      "item": "https://zerosstudio.vercel.app/about.html"
     }]
   }
   </script>
@@ -68,16 +68,16 @@
           <a href="#" class="nav-link"><span>About</span></a>
         </li>
         <li>
-          <a href="web-design-development-services.html" class="nav-link"><span>Services</span></a>
+          <a href="services.html" class="nav-link"><span>Services</span></a>
         </li>
         <li>
-          <a href="web-design-development-projects.html" class="nav-link"><span>Projects</span></a>
+          <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
           <a href="./404-page-not-found.html" class="nav-link"><span>Blog</span></a>
         </li>
         <li>
-          <a href="contact-us.html" class="nav-link"><span>Contact</span></a>
+          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -88,11 +88,11 @@
     </nav>
     <ul class="second-nav">
       <li class="second-nav-li"><a href="index.html">Home</a></li>
-      <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
-      <li class="second-nav-li"><a href="web-design-development-services.html">Services</a></li>
-      <li class="second-nav-li"><a href="web-design-development-projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="about.html">About</a></li>
+      <li class="second-nav-li"><a href="services.html">Services</a></li>
+      <li class="second-nav-li"><a href="projects.html">Project</a></li>
       <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
-      <li class="second-nav-li"><a href="contact-us.html">Contact</a></li>
+      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
     </ul>
   </header>
 
@@ -448,10 +448,10 @@
               <h4>Quick Links</h4>
               <ul class="footer-links">
                 <li><a href="#">Home</a></li>
-                <li><a href="about-zeros-studio.html">About Us</a></li>
-                <li><a href="web-design-development-services.html">Services</a></li>
-                <li><a href="web-design-development-projects.html">Projects</a></li>
-                <li><a href="contact-us.html">Contact</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="Contact.html">Contact</a></li>
               </ul>
             </div>
 
