--- a/our-privacy-policy.html
+++ b/our-privacy-policy.html
@@ -46,7 +46,7 @@
           <a href="index.html" class="nav-link"><span>Home</span></a>
         </li>
         <li>
-          <a href="about-zeros-studio.html" class="nav-link"><span>About</span></a>
+          <a href="about.html" class="nav-link"><span>About</span></a>
         </li>
         <li>
           <a href="services.html" class="nav-link"><span>Services</span></a>
@@ -69,7 +69,7 @@
     </nav>
     <ul class="second-nav">
       <li class="second-nav-li"><a href="index.html">Home</a></li>
-      <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
+      <li class="second-nav-li"><a href="about.html">About</a></li>
       <li class="second-nav-li"><a href="services.html">Services</a></li>
       <li class="second-nav-li"><a href="projects.html">Project</a></li>
       <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
@@ -254,7 +254,7 @@
             <h4>Quick Links</h4>
             <ul class="footer-links">
               <li><a href="index.html">Home</a></li>
-              <li><a href="about-zeros-studio.html">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="projects.html">Projects</a></li>
               <li><a href="./404-page-not-found.html">Blog</a></li>
