--- a/projects.html
+++ b/projects.html
@@ -12,16 +12,16 @@
     <meta property="og:title" content="Portfolio - Zeros Studio Creative Projects & Case Studies">
     <meta property="og:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries. See our successful case studies.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://zerosstudio.vercel.app/web-design-development-projects.html">
+    <meta property="og:url" content="https://zerosstudio.vercel.app/projects.html">
     <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
     <meta property="og:locale" content="en_IN">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Portfolio - Zeros Studio Creative Projects & Case Studies">
     <meta name="twitter:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries. See our successful case studies.">
     <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-    <link rel="canonical" href="https://zerosstudio.vercel.app/web-design-development-projects.html">
-    <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/web-design-development-projects.html">
-    <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/web-design-development-projects.html">
+    <link rel="canonical" href="https://zerosstudio.vercel.app/projects.html">
+    <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/projects.html">
+    <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/projects.html">
     <title>Portfolio - Zeros Studio Creative Projects & Case Studies</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/critical.css">
@@ -43,7 +43,7 @@
         "@type": "ListItem",
         "position": 2,
         "name": "Projects",
-        "item": "https://zerosstudio.vercel.app/web-design-development-projects.html"
+        "item": "https://zerosstudio.vercel.app/projects.html"
       }]
     }
     </script>
@@ -56,11 +56,11 @@
             <a href="index.html" class="logo">ZEROS</a>
             <ul id="first-nav">
                 <li><a href="index.html" class="nav-link"><span>Home</span></a></li>
-                <li><a href="about-zeros-studio.html" class="nav-link"><span>About</span></a></li>
-                <li><a href="web-design-development-projects.html" class="nav-link active"><span>Projects</span></a></li>
+                <li><a href="about.html" class="nav-link"><span>About</span></a></li>
+                <li><a href="projects.html" class="nav-link active"><span>Projects</span></a></li>
                 <li><a href="./404-page-not-found.html" class="nav-link"><span>Blog</span></a></li>
-                <li><a href="web-design-development-price.html" class="nav-link"><span>Pricing</span></a></li>
-                <li><a href="contact-us.html" class="nav-link"><span>Contact</span></a></li>
+                <li><a href="Purchase.html" class="nav-link"><span>Pricing</span></a></li>
+                <li><a href="Contact.html" class="nav-link"><span>Contact</span></a></li>
             </ul>
             <div id="hamburger" onclick="showSecondNav()">
             <span></span>
@@ -70,11 +70,11 @@
         </nav>
         <ul class="second-nav">
             <li class="second-nav-li"><a href="index.html">Home</a></li>
-            <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
-            <li class="second-nav-li"><a href="web-design-development-projects.html">Project</a></li>
+            <li class="second-nav-li"><a href="about.html">About</a></li>
+            <li class="second-nav-li"><a href="projects.html">Project</a></li>
             <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
-            <li class="second-nav-li"><a href="web-design-development-price.html">Pricing</a></li>
-            <li class="second-nav-li"><a href="contact-us.html">Contact</a></li>
+            <li class="second-nav-li"><a href="Purchase.html">Pricing</a></li>
+            <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
         </ul>
     </header>
 
@@ -353,10 +353,10 @@
                         <h4>Quick Links</h4>
                         <ul class="footer-links">
                             <li><a href="#">Home</a></li>
-                            <li><a href="about-zeros-studio.html">About Us</a></li>
-                            <li><a href="web-design-development-services.html">Services</a></li>
-                            <li><a href="web-design-development-projects.html">Projects</a></li>
-                            <li><a href="contact-us.html">Contact</a></li>
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="projects.html">Projects</a></li>
+                            <li><a href="Contact.html">Contact</a></li>
                         </ul>
                     </div>
 
