--- a/404-page-not-found.html
+++ b/404-page-not-found.html
@@ -46,19 +46,19 @@
           <a href="index.html" class="nav-link"><span>Home</span></a>
         </li>
         <li>
-          <a href="about-zeros-studio.html" class="nav-link"><span>About</span></a>
+          <a href="about.html" class="nav-link"><span>About</span></a>
         </li>
         <li>
-          <a href="./web-design-development-services.html" class="nav-link"><span>Services</span></a>
+          <a href="./services.html" class="nav-link"><span>Services</span></a>
         </li>
         <li>
-          <a href="./web-design-development-projects.html" class="nav-link"><span>Projects</span></a>
+          <a href="./projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
           <a href="./404-page-not-found.html" class="nav-link"><span>Blog</span></a>
         </li>
         <li>
-          <a href="contact-us.html" class="nav-link"><span>Contact</span></a>
+          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -69,11 +69,11 @@
     </nav>
     <ul class="second-nav">
       <li class="second-nav-li"><a href="index.html">Home</a></li>
-      <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
-      <li class="second-nav-li"><a href="./web-design-development-services.html">Services</a></li>
-      <li class="second-nav-li"><a href="./web-design-development-projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="about.html">About</a></li>
+      <li class="second-nav-li"><a href="./services.html">Services</a></li>
+      <li class="second-nav-li"><a href="./projects.html">Project</a></li>
       <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
-      <li class="second-nav-li"><a href="contact-us.html">Contact</a></li>
+      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
     </ul>
   </header>
 
@@ -107,9 +107,9 @@
             </p>
             <ul class="error-options">
               <li><a href="index.html">Return to our homepage</a></li>
-              <li><a href="./web-design-development-services.html">Explore our services</a></li>
-              <li><a href="./web-design-development-projects.html">View our portfolio</a></li>
-              <li><a href="contact-us.html">Contact our support team</a></li>
+              <li><a href="./services.html">Explore our services</a></li>
+              <li><a href="./projects.html">View our portfolio</a></li>
+              <li><a href="Contact.html">Contact our support team</a></li>
             </ul>
           </div>
         </div>
@@ -145,22 +145,22 @@
             <h4>Quick Links</h4>
             <ul class="footer-links">
               <li><a href="index.html">Home</a></li>
-              <li><a href="about-zeros-studio.html">About Us</a></li>
-              <li><a href="./web-design-development-services.html">Services</a></li>
-              <li><a href="./web-design-development-projects.html">Projects</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="./services.html">Services</a></li>
+              <li><a href="./projects.html">Projects</a></li>
               <li><a href="./404-page-not-found.html">Blog</a></li>
-              <li><a href="contact-us.html">Contact</a></li>
+              <li><a href="Contact.html">Contact</a></li>
             </ul>
           </div>
 
           <div class="footer-column">
             <h4>Services</h4>
             <ul class="footer-links">
-              <li><a href="./web-design-development-services.html">Web Development</a></li>
-              <li><a href="./web-design-development-services.html">UI/UX Design</a></li>
-              <li><a href="./web-design-development-services.html">Mobile Apps</a></li>
-              <li><a href="./web-design-development-services.html">SEO & Marketing</a></li>
-              <li><a href="./web-design-development-services.html">Brand Identity</a></li>
+              <li><a href="./services.html">Web Development</a></li>
+              <li><a href="./services.html">UI/UX Design</a></li>
+              <li><a href="./services.html">Mobile Apps</a></li>
+              <li><a href="./services.html">SEO & Marketing</a></li>
+              <li><a href="./services.html">Brand Identity</a></li>
             </ul>
           </div>
 
