--- a/Purchase.html
+++ b/Purchase.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business growth in Indore.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://zerosstudio.vercel.app/web-design-development-price.html">
+  <meta property="og:url" content="https://zerosstudio.vercel.app/Purchase.html">
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <meta property="og:locale" content="en_IN">
   <meta name="twitter:card" content="summary_large_image">
@@ -23,9 +23,9 @@
   <meta name="twitter:description"
     content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business growth in Indore.">
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-  <link rel="canonical" href="https://zerosstudio.vercel.app/web-design-development-price.html">
-  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/web-design-development-price.html">
-  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/web-design-development-price.html">
+  <link rel="canonical" href="https://zerosstudio.vercel.app/Purchase.html">
+  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/Purchase.html">
+  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/Purchase.html">
   <title>Pricing Plans - Zeros Studio Web Design Services</title>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -50,7 +50,7 @@
       "@type": "ListItem",
       "position": 2,
       "name": "Pricing",
-      "item": "https://zerosstudio.vercel.app/web-design-development-price.html"
+      "item": "https://zerosstudio.vercel.app/Purchase.html"
     }]
   }
   </script>
@@ -66,19 +66,19 @@
           <a href="index.html" class="nav-link"><span>Home</span></a>
         </li>
         <li>
-          <a href="about-zeros-studio.html" class="nav-link"><span>About</span></a>
+          <a href="about.html" class="nav-link"><span>About</span></a>
         </li>
         <li>
-          <a href="web-design-development-services.html" class="nav-link"><span>Services</span></a>
+          <a href="services.html" class="nav-link"><span>Services</span></a>
         </li>
         <li>
-          <a href="web-design-development-projects.html" class="nav-link"><span>Projects</span></a>
+          <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
           <a href="./404-page-not-found.html" class="nav-link"><span>Blog</span></a>
         </li>
         <li>
-          <a href="contact-us.html" class="nav-link"><span>Contact</span></a>
+          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -89,11 +89,11 @@
     </nav>
     <ul class="second-nav">
       <li class="second-nav-li"><a href="index.html">Home</a></li>
-      <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
-      <li class="second-nav-li"><a href="web-design-development-services.html">Services</a></li>
-      <li class="second-nav-li"><a href="web-design-development-projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="about.html">About</a></li>
+      <li class="second-nav-li"><a href="services.html">Services</a></li>
+      <li class="second-nav-li"><a href="projects.html">Project</a></li>
       <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
-      <li class="second-nav-li"><a href="contact-us.html">Contact</a></li>
+      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
     </ul>
   </header>
 
@@ -142,7 +142,7 @@
               <li><i class="fas fa-check-circle"></i> Email Support</li>
               <li><i class="fas fa-times-circle"></i> Advanced Analytics</li>
             </ul>
-            <a href="./contact-us.html" class="cta-button">Get Started</a>
+            <a href="./Contact.html" class="cta-button">Get Started</a>
           </div>
 
           <!-- Pro Plan (Recommended) -->
@@ -164,7 +164,7 @@
               </li>
               <li><i class="fas fa-check-circle"></i> Advanced Analytics</li>
             </ul>
-            <a href="./contact-us.html" class="cta-button">Choose Plan</a>
+            <a href="./Contact.html" class="cta-button">Choose Plan</a>
           </div>
 
           <!-- Enterprise Plan -->
@@ -184,7 +184,7 @@
               </li>
               <li><i class="fas fa-check-circle"></i> Custom Reporting</li>
             </ul>
-            <a href="./contact-us.html" class="cta-button">Contact Us</a>
+            <a href="./Contact.html" class="cta-button">Contact Us</a>
           </div>
         </div>
       </div>
@@ -402,7 +402,7 @@
         <div class="cta-content">
           <h2>Ready to Get Started?</h2>
           <p>Join thousands of satisfied customers who have transformed their online presence with our services.</p>
-          <a href="contact-us.html" class="cta-button">Start Your Free Trial</a>
+          <a href="Contact.html" class="cta-button">Start Your Free Trial</a>
         </div>
       </div>
     </section>
@@ -436,10 +436,10 @@
             <h4>Quick Links</h4>
             <ul class="footer-links">
               <li><a href="#">Home</a></li>
-              <li><a href="about-zeros-studio.html">About Us</a></li>
-              <li><a href="web-design-development-services.html">Services</a></li>
-              <li><a href="web-design-development-projects.html">Projects</a></li>
-              <li><a href="contact-us.html">Contact</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="Contact.html">Contact</a></li>
             </ul>
           </div>
 
