--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
           <a href="#" class="nav-link"><span>Home</span></a>
         </li>
         <li>
-          <a href="about-zeros-studio.html" class="nav-link"><span>About</span></a>
+          <a href="about.html" class="nav-link"><span>About</span></a>
         </li>
         <li>
-          <a href="web-design-development-services.html" class="nav-link"><span>Services</span></a>
+          <a href="services.html" class="nav-link"><span>Services</span></a>
         </li>
         <li>
-          <a href="web-design-development-projects.html" class="nav-link"><span>Projects</span></a>
+          <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
           <a href="./404-page-not-found.html" class="nav-link"><span>Blog</span></a>
         </li>
         <li>
-          <a href="contact-us.html" class="nav-link"><span>Contact</span></a>
+          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -129,11 +129,11 @@
   <main>
     <ul class="second-nav">
       <li class="second-nav-li"><a href="index.html">Home</a></li>
-      <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
-      <li class="second-nav-li"><a href="web-design-development-services.html">Services</a></li>
-      <li class="second-nav-li"><a href="web-design-development-projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="about.html">About</a></li>
+      <li class="second-nav-li"><a href="services.html">Services</a></li>
+      <li class="second-nav-li"><a href="projects.html">Project</a></li>
       <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
-      <li class="second-nav-li"><a href="contact-us.html">Contact</a></li>
+      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
     </ul>
     <section class="hero">
       <div class="hero-content" id="hero-content">
@@ -144,7 +144,7 @@
           Building beautiful, effective websites that drive results. Let's
           create something amazing together.
         </p>
-        <a href="contact-us.html" class="cta-button">
+        <a href="Contact.html" class="cta-button">
           <span>Get Started</span>
           <i class="fas fa-arrow-right"></i>
         </a>
@@ -214,7 +214,7 @@
             </li>
           </ul>
 
-          <a href="./contact-us.html" class="web-cta-button">
+          <a href="./Contact.html" class="web-cta-button">
             Get Started Now
             <i class="fas fa-arrow-right"></i>
           </a>
@@ -314,7 +314,7 @@
           </div>
 
           <div class="about-cta">
-            <a href="web-design-development-projects.html" class="about-button" id="discover-work-btn">
+            <a href="projects.html" class="about-button" id="discover-work-btn">
               <span>Discover Our Work</span>
               <i class="fas fa-arrow-right"></i>
             </a>
@@ -922,7 +922,7 @@
               <i class="fas fa-times-circle"></i> Content Management System
             </li>
           </ul>
-          <a href="contact-us.html" class="cta-button">Get Started</a>
+          <a href="Contact.html" class="cta-button">Get Started</a>
         </div>
         <!-- Pricing Card 2 (Popular) -->
         <div class="pricing-card popular">
@@ -951,7 +951,7 @@
             <li><i class="fas fa-check-circle"></i> 3 Months Support</li>
             <li><i class="fas fa-check-circle"></i> Analytics Integration</li>
           </ul>
-          <a href="contact-us.html" class="cta-button">Get Started</a>
+          <a href="Contact.html" class="cta-button">Get Started</a>
         </div>
         <!-- Pricing Card 3 -->
         <div class="pricing-card">
@@ -981,7 +981,7 @@
             <li><i class="fas fa-check-circle"></i> 6 Months Support</li>
             <li><i class="fas fa-check-circle"></i> Custom Integrations</li>
           </ul>
-          <a href="contact-us.html" class="cta-button">Get Started</a>
+          <a href="Contact.html" class="cta-button">Get Started</a>
         </div>
       </div>
 
@@ -1184,10 +1184,10 @@
             <h4>Quick Links</h4>
             <ul class="footer-links">
               <li><a href="#">Home</a></li>
-              <li><a href="about-zeros-studio.html">About Us</a></li>
-              <li><a href="web-design-development-services.html">Services</a></li>
-              <li><a href="web-design-development-projects.html">Projects</a></li>
-              <li><a href="contact-us.html">Contact</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="Contact.html">Contact</a></li>
             </ul>
           </div>
 
