--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://zerosstudio.vercel.app/web-design-development-services.html" />
+  <meta property="og:url" content="https://zerosstudio.vercel.app/services.html" />
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
   <meta property="og:locale" content="en_IN" />
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -24,9 +24,9 @@
   <meta name="twitter:description"
     content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions." />
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
-  <link rel="canonical" href="https://zerosstudio.vercel.app/web-design-development-services.html" />
-  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/web-design-development-services.html" />
-  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/web-design-development-services.html" />
+  <link rel="canonical" href="https://zerosstudio.vercel.app/services.html" />
+  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/services.html" />
+  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/services.html" />
   <title>Our Services - Zeros Studio</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -49,7 +49,7 @@
         "@type": "ListItem",
         "position": 2,
         "name": "Services",
-        "item": "https://zerosstudio.vercel.app/web-design-development-services.html"
+        "item": "https://zerosstudio.vercel.app/services.html"
       }]
     }
     </script>
@@ -65,19 +65,19 @@
           <a href="index.html" class="nav-link"><span>Home</span></a>
         </li>
         <li>
-          <a href="about-zeros-studio.html" class="nav-link"><span>About</span></a>
+          <a href="about.html" class="nav-link"><span>About</span></a>
         </li>
         <li>
-          <a href="web-design-development-services.html" class="nav-link"><span>Services</span></a>
+          <a href="services.html" class="nav-link"><span>Services</span></a>
         </li>
         <li>
-          <a href="web-design-development-projects.html" class="nav-link"><span>Projects</span></a>
+          <a href="projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
           <a href="./404-page-not-found.html" class="nav-link"><span>Blog</span></a>
         </li>
         <li>
-          <a href="contact-us.html" class="nav-link"><span>Contact</span></a>
+          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -90,11 +90,11 @@
 
   <ul class="second-nav">
     <li class="second-nav-li"><a href="index.html">Home</a></li>
-    <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
-    <li class="second-nav-li"><a href="web-design-development-services.html">Services</a></li>
-    <li class="second-nav-li"><a href="web-design-development-projects.html">Project</a></li>
+    <li class="second-nav-li"><a href="about.html">About</a></li>
+    <li class="second-nav-li"><a href="services.html">Services</a></li>
+    <li class="second-nav-li"><a href="projects.html">Project</a></li>
     <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
-    <li class="second-nav-li"><a href="contact-us.html">Contact</a></li>
+    <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
   </ul>
 
   <!-- Enhanced Hero Section -->
@@ -288,7 +288,7 @@
               <div class="stat-label">Years Experience</div>
             </div>
           </div>
-          <a href="contact-us.html" class="cta-button">
+          <a href="Contact.html" class="cta-button">
             <span>Get Started Today</span>
             <i class="fas fa-arrow-right"></i>
           </a>
@@ -422,10 +422,10 @@
             <h4>Quick Links</h4>
             <ul class="footer-links">
               <li><a href="index.html">Home</a></li>
-              <li><a href="about-zeros-studio.html">About Us</a></li>
-              <li><a href="web-design-development-services.html">Services</a></li>
-              <li><a href="web-design-development-projects.html">Projects</a></li>
-              <li><a href="contact-us.html">Contact</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="Contact.html">Contact</a></li>
             </ul>
           </div>
 
