--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M9MWJ6J4');</script>
+<!-- End Google Tag Manager -->
   <meta name="description"
     content="ZEROS Studio Creative Agency - We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
   <meta name="keywords"
@@ -66,6 +73,12 @@
      crossorigin="anonymous"></script>
 
 </head>
+
+<body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M9MWJ6J4"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-79QW0XLL04"></script>
 <script>
@@ -75,8 +88,6 @@
 
   gtag('config', 'G-79QW0XLL04');
 </script>
-
-<body>
   <!-- Preloader -->
   <div class="preloader">
     <div class="loader">
