--- a/about.html
+++ b/about.html
@@ -53,6 +53,8 @@
   }
   </script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7621401186463500"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
