--- a/about.html
+++ b/about.html
@@ -55,6 +55,14 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7621401186463500"
      crossorigin="anonymous"></script>
+
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-7621401186463500">
+</amp-auto-ads>
+
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 
 <body>
