--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7621401186463500"
      crossorigin="anonymous"></script>
 
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-7621401186463500">
+</amp-auto-ads>
+
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
+
 </head>
 
 <body>
